<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>PlaceholdersTesting</artifactId>
    <version>1.0-SNAPSHOT</version>

    <repositories>

        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/content/groups/public/</url>
        </repository>
        <!-- This adds the Spigot Maven repository to the build -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    
    
    <dependencies>
        
        
        
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.3.6</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/worldedit-bukkit-7.3.6.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.11</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/worldguard-bukkit-7.0.11-dist.jar</systemPath>
        </dependency>

        
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.3.0-SNAPSHOT-726</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/ProtocolLib.jar</systemPath>
        </dependency>

        <!--This adds the Spigot API artifact to the build -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>luckperms-bukkit</artifactId>
            <version>5.4.153</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/LuckPerms-Bukkit-5.4.153.jar</systemPath>
        </dependency>

        <!-- PlaceholderAPI (Manually added from /lib) -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/PlaceholderAPI-2.11.6.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>de.tr7zw</groupId>
            <artifactId>NBTAPI</artifactId>
            <version>2.14.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/item-nbt-api-plugin-2.14.1.jar</systemPath>
        </dependency>



        <!-- SCore (Manually added from /lib) -->
        <dependency>
            <groupId>com.ssomar</groupId>
            <artifactId>score</artifactId>
            <version>5.25.3.16</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/SCore-5.25.3.16.jar</systemPath>
        </dependency>
    </dependencies>


    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


</project>